--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -206,8 +206,8 @@ jobs:
     needs: [verilator, bender]
     strategy:
       matrix:
-        mempool_config: [minpool]
-        # mempool_config: [test_4x4noc_64core]
+        # mempool_config: [minpool]
+        mempool_config: [minpool, test_4x4noc_64core]
     steps:
     - uses: actions/checkout@v4
     - name: Cache Verilator Model
@@ -304,8 +304,8 @@ jobs:
     needs: tc-gcc
     strategy:
       matrix:
-        mempool_config: [minpool]
-        # mempool_config: [test_4x4noc_64core]
+        # mempool_config: [minpool]
+        mempool_config: [minpool, test_4x4noc_64core]
     steps:
     - uses: actions/checkout@v4
     - name: Get riscv-gnu-toolchain artifacts
@@ -336,8 +336,8 @@ jobs:
     needs: [tc-gcc, tc-llvm]
     strategy:
       matrix:
-        mempool_config: [minpool]
-        # mempool_config: [test_4x4noc_64core]
+        # mempool_config: [minpool]
+        mempool_config: [minpool, test_4x4noc_64core]
     steps:
     - uses: actions/checkout@v4
     - name: Get riscv-gnu-toolchain artifacts
@@ -374,8 +374,8 @@ jobs:
     needs: [tc-gcc, tc-llvm, tc-halide]
     strategy:
       matrix:
-        mempool_config: [minpool]
-        # mempool_config: [test_4x4noc_64core]
+        # mempool_config: [minpool]
+        mempool_config: [minpool, test_4x4noc_64core]
     steps:
     - uses: actions/checkout@v4
     - name: Get riscv-gnu-toolchain artifacts
@@ -419,8 +419,8 @@ jobs:
     needs: [build-apps-gcc, riscv-isa-sim, verilator-model]
     strategy:
       matrix:
-        mempool_config: [minpool]
-        # mempool_config: [test_4x4noc_64core]
+        # mempool_config: [minpool]
+        mempool_config: [minpool, test_4x4noc_64core]
     steps:
     - uses: actions/checkout@v4
     - name: Get apps-gcc artifacts
@@ -458,8 +458,8 @@ jobs:
     needs: [build-apps-llvm, riscv-isa-sim, verilator-model]
     strategy:
       matrix:
-        mempool_config: [minpool]
-        # mempool_config: [test_4x4noc_64core]
+        # mempool_config: [minpool]
+        mempool_config: [minpool, test_4x4noc_64core]
     steps:
     - uses: actions/checkout@v4
     - name: Get apps-llvm artifacts
@@ -497,8 +497,8 @@ jobs:
     needs: [build-apps-halide, riscv-isa-sim, verilator-model]
     strategy:
       matrix:
-        mempool_config: [minpool]
-        # mempool_config: [test_4x4noc_64core]
+        # mempool_config: [minpool]
+        mempool_config: [minpool, test_4x4noc_64core]
     steps:
     - uses: actions/checkout@v4
     - name: Get apps-halide artifacts
@@ -603,8 +603,8 @@ jobs:
       run-apps-llvm, run-apps-halide]
     strategy:
       matrix:
-        mempool_config: [minpool]
-        # mempool_config: [test_4x4noc_64core]
+        # mempool_config: [minpool]
+        mempool_config: [minpool, test_4x4noc_64core]
     steps:
     - name: Delete artifacts
       uses: geekyeggo/delete-artifact@v4
