[CI] Use gcc instead of llvm for verilator.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -179,7 +179,7 @@ jobs:
       id: verilator-cache
       with:
         path: install/verilator
-        key: ${{ runner.os }}-verilator-gcc-${{ env.tc-verilator-hash }}
+        key: ${{ runner.os }}-verilator-llvm-${{ env.tc-verilator-hash }}
     - name: Download Verilator
       if: steps.verilator-cache.outputs.cache-hit != 'true'
       run: |
@@ -224,7 +224,7 @@ jobs:
         android: true
         dotnet: true
         haskell: true
-        large-packages: true
+        large-packages: false # to keep clang++ for verilator
         docker-images: true
         swap-storage: true
     - name: Get Verilator artifacts
