--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -298,6 +298,20 @@ jobs:
         make -C hardware src/bootrom.sv
         git diff --exit-code
 
+  check-control-registers:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install Python requirements
+      run: pip install -r python-requirements.txt
+    - name: Build Control Registers
+      run: |
+        git submodule update --init --recursive -- hardware/deps/register_interface
+        git apply hardware/deps/patches/register_interface.patch
+        make -C hardware/src/control_registers clean
+        make -C hardware/src/control_registers all
+        git diff --ignore-all-space --ignore-submodules=dirty --exit-code
+
   check-opcodes:
     runs-on: ubuntu-22.04
     steps:
