--- a/Bender.yml
+++ b/Bender.yml
@@ -42,6 +42,8 @@ sources:
   - hardware/src/mempool_bank_id_remapper.sv
   - hardware/src/mempool_dma_tile_id_remapper.sv
   - hardware/src/mempool_tile_rw_demux.sv
+  - hardware/src/control_registers/control_registers_reg_pkg.sv
+  - hardware/src/control_registers/control_registers_reg_top.sv
   # Level 1
   - hardware/src/mempool_tile.sv
   # Level 3
