--- a/hardware/deps/snitch/Bender.yml
+++ b/hardware/deps/snitch/Bender.yml
@@ -9,7 +9,7 @@ package:
 dependencies:
   axi:          { git: "https://github.com/pulp-platform/axi.git",          version: 0.36.0 }
   common_cells: { git: "https://github.com/pulp-platform/common_cells.git", version: 1.19.0 }
-  scm:          { git: "https://github.com/pulp-platform/scm.git",          version: 1.1.0  }
+  scm:          { path: "hardware/deps/snitch" }
 
 sources:
   - defines:
